<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_home">

  <fragment
    android:id="@+id/nav_home"
    android:label="@string/menu_home"
    android:name="com.babenkovladimir.androidlesson7architecture.navigation_drawer.ui.home.HomeFragment"
    tools:layout="@layout/fragment_home" />

  <fragment
    android:id="@+id/nav_gallery"
    android:label="@string/menu_gallery"
    android:name="com.babenkovladimir.androidlesson7architecture.navigation_drawer.ui.gallery.GalleryFragment"
    tools:layout="@layout/fragment_gallery" />

  <fragment
    android:id="@+id/nav_slideshow"
    android:label="@string/menu_slideshow"
    android:name="com.babenkovladimir.androidlesson7architecture.navigation_drawer.ui.slideshow.SlideshowFragment"
    tools:layout="@layout/fragment_slideshow" />

  <fragment
    android:id="@+id/nav_tools"
    android:label="@string/menu_tools"
    android:name="com.babenkovladimir.androidlesson7architecture.navigation_drawer.ui.tools.ToolsFragment"
    tools:layout="@layout/fragment_tools" />

  <fragment
    android:id="@+id/nav_share"
    android:label="@string/menu_share"
    android:name="com.babenkovladimir.androidlesson7architecture.navigation_drawer.ui.share.ShareFragment"
    tools:layout="@layout/fragment_share" />

  <fragment
    android:id="@+id/nav_send"
    android:label="@string/menu_send"
    android:name="com.babenkovladimir.androidlesson7architecture.navigation_drawer.ui.send.SendFragment"
    tools:layout="@layout/fragment_send" />
</navigation>